testdata/golden/sema/valid/module_multifile_internal/alpha.fmt
pragma module;

fn alpha(x: int) -> int {
    return x + 1;
}
