testdata/golden/sema/invalid/module_wrong_import/main.fmt
pragma module;

import foo/_foo;

fn use_value() -> int {
    return 1;
}
